# baxter_simulator

baxter_gazebo/: CMakeLists.txt
baxter_gazebo/launch/: baxter_world.launch
baxter_sim_hardware/: CMakeLists.txt
baxter_sim_hardware/include/baxter_sim_hardware/: baxter_emulator.h
baxter_sim_hardware/launch/: baxter_sdk_control.launch
baxter_sim_io/include/baxter_sim_io/: baxter_io.hpp  qnode.hpp
baxter_sim_kinematics/launch/: baxter_sim_kinematics.launch
